--- a/report.tex
+++ b/report.tex
@@ -11,10 +11,10 @@
     abnormalities on the chest X-ray can help in screening and severity-based prioritization.
     There has been increasing interest in using deep learning for computer-aided diagnosis in both the
     machine learning and radiology communities. There has also been recent work in model explainability and
-    unsupervised localization, and methods for dealing with label noise in a weakly supervised setting\\
+    weakly supervised localization, and methods for dealing with label noise in a weakly supervised setting\\
 
     Inspired by previous work, we develop algorithms that
-    can detect abnormalities on the X-ray and explain these detections using unsupervised localization.
+    can detect abnormalities on the X-ray and explain these detections using weakly supervised localization.
     We establish baselines, benchmark against previous work and evaluate the effects of recent techniques
     such as mixup on performance and generalizability to other datasets.
     In terms of AUROC, we acheive performance competitive with previous work in a) detecting pneumonia-like
@@ -31,9 +31,9 @@
     \section{Report layout}
 \chapter{Literature survey}
     \section{CheXNet and CheXNext}
+    \section{Weakly supervised learning}
     \section{Explainability}
     \section{Fairness}
-    \section{Label noise}
     \section{Learning at multiple scales}
     \section{Attention}
     \section{Generalizability}
