Added sections on fairness and motivation

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,141 @@
+@misc{modi_suresh_2019, title={Scaling up TB screening with AI: Deploying automated X-ray screening in remote regions}, url={http://blog.qure.ai/notes/scaling-up-tb-screening-with-ai}, journal={Scaling up TB screening with AI: Deploying automated X-ray screening in remote regions}, author={Modi, Ankit and Suresh, Reshma}, year={2019}, month={Apr}}
+@article{esteva2017dermatologist,
+  title={Dermatologist-level classification of skin cancer with deep neural networks},
+  author={Esteva, Andre and Kuprel, Brett and Novoa, Roberto A and Ko, Justin and Swetter, Susan M and Blau, Helen M and Thrun, Sebastian},
+  journal={Nature},
+  volume={542},
+  number={7639},
+  pages={115},
+  year={2017},
+  publisher={Nature Publishing Group}
+  }
+@article{agarwal2018reductions,
+  title={A reductions approach to fair classification},
+  author={Agarwal, Alekh and Beygelzimer, Alina and Dud{\'{\i}}k, Miroslav and Langford, John and Wallach, Hanna},
+  journal={arXiv preprint arXiv:1803.02453},
+  year={2018}
+}
+@inproceedings{kusner2017counterfactual,
+  title={Counterfactual fairness},
+  author={Kusner, Matt J and Loftus, Joshua and Russell, Chris and Silva, Ricardo},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={4066--4076},
+  year={2017}
+}
+@article{chouldechova2017fair,
+  title={Fair prediction with disparate impact: A study of bias in recidivism prediction instruments},
+  author={Chouldechova, Alexandra},
+  journal={Big data},
+  volume={5},
+  number={2},
+  pages={153--163},
+  year={2017},
+  publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
+}
+@inproceedings{dwork2012fairness,
+  title={Fairness through awareness},
+  author={Dwork, Cynthia and Hardt, Moritz and Pitassi, Toniann and Reingold, Omer and Zemel, Richard},
+  booktitle={Proceedings of the 3rd innovations in theoretical computer science conference},
+  pages={214--226},
+  year={2012},
+  organization={ACM}
+}
+@inproceedings{hardt2016equality,
+  title={Equality of opportunity in supervised learning},
+  author={Hardt, Moritz and Price, Eric and Srebro, Nati and others},
+  booktitle={Advances in neural information processing systems},
+  pages={3315--3323},
+  year={2016}
+}
+@inproceedings{buolamwini2018gender,
+  title={Gender shades: Intersectional accuracy disparities in commercial gender classification},
+  author={Buolamwini, Joy and Gebru, Timnit},
+  booktitle={Conference on Fairness, Accountability and Transparency},
+  pages={77--91},
+  year={2018}
+}
+@inproceedings{bolukbasi2016man,
+  title={Man is to computer programmer as woman is to homemaker? debiasing word embeddings},
+  author={Bolukbasi, Tolga and Chang, Kai-Wei and Zou, James Y and Saligrama, Venkatesh and Kalai, Adam T},
+  booktitle={Advances in neural information processing systems},
+  pages={4349--4357},
+  year={2016}
+}
+@misc{bbc_news_2013, title={Google searches expose racial bias, says study of names}, url={https://www.bbc.com/news/technology-21322183}, journal={BBC News}, publisher={BBC}, year={2013}, month={Feb}}
+@misc{dastin_2018, title={Insight - Amazon scraps secret AI recruiting tool that showed bias...}, url={https://in.reuters.com/article/amazon-com-jobs-automation/insight-amazon-scraps-secret-ai-recruiting-tool-that-showed-bias-against-women-idINKCN1MK0AH}, journal={Reuters}, publisher={Thomson Reuters}, author={Dastin, Jeffrey}, year={2018}, month={Oct}}
+@article{zech2018variable,
+  title={Variable generalization performance of a deep learning model to detect pneumonia in chest radiographs: A cross-sectional study},
+  author={Zech, John R and Badgeley, Marcus A and Liu, Manway and Costa, Anthony B and Titano, Joseph J and Oermann, Eric Karl},
+  journal={PLoS medicine},
+  volume={15},
+  number={11},
+  pages={e1002683},
+  year={2018},
+  publisher={Public Library of Science}
+}
+@article{recht2018cifar,
+  title={Do CIFAR-10 Classifiers Generalize to CIFAR-10?},
+  author={Recht, Benjamin and Roelofs, Rebecca and Schmidt, Ludwig and Shankar, Vaishaal},
+  journal={arXiv preprint arXiv:1806.00451},
+  year={2018}
+}
+@inproceedings{shrikumar2017learning,
+  title={Learning important features through propagating activation differences},
+  author={Shrikumar, Avanti and Greenside, Peyton and Kundaje, Anshul},
+  booktitle={Proceedings of the 34th International Conference on Machine Learning-Volume 70},
+  pages={3145--3153},
+  year={2017},
+  organization={JMLR. org}
+}
+@inproceedings{selvaraju2017grad,
+  title={Grad-cam: Visual explanations from deep networks via gradient-based localization},
+  author={Selvaraju, Ramprasaath R and Cogswell, Michael and Das, Abhishek and Vedantam, Ramakrishna and Parikh, Devi and Batra, Dhruv},
+  booktitle={Proceedings of the IEEE International Conference on Computer Vision},
+  pages={618--626},
+  year={2017}
+}
+@article{bach2015pixel,
+  title={On pixel-wise explanations for non-linear classifier decisions by layer-wise relevance propagation},
+  author={Bach, Sebastian and Binder, Alexander and Montavon, Gr{\'{\e}}goire and Klauschen, Frederick and M{\"u}ller, Klaus-Robert and Samek, Wojciech},
+  journal={PloS one},
+  volume={10},
+  number={7},
+  pages={e0130140},
+  year={2015},
+  publisher={Public Library of Science}
+}
+@inproceedings{zhou2016learning,
+  title={Learning deep features for discriminative localization},
+  author={Zhou, Bolei and Khosla, Aditya and Lapedriza, Agata and Oliva, Aude and Torralba, Antonio},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={2921--2929},
+  year={2016}
+}
+@incollection{NIPS2017_7062,
+title = {A Unified Approach to Interpreting Model Predictions},
+author = {Lundberg, Scott M and Lee, Su-In},
+booktitle = {Advances in Neural Information Processing Systems 30},
+editor = {I. Guyon and U. V. Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+pages = {4765--4774},
+year = {2017},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/7062-a-unified-approach-to-interpreting-model-predictions.pdf}
+}
+@inproceedings{ribeiro2016should,
+  title={Why should i trust you?: Explaining the predictions of any classifier},
+  author={Ribeiro, Marco Tulio and Singh, Sameer and Guestrin, Carlos},
+  booktitle={Proceedings of the 22nd ACM SIGKDD international conference on knowledge discovery and data mining},
+  pages={1135--1144},
+  year={2016},
+  organization={ACM}
+}
+@inproceedings{krizhevsky2012imagenet,
+  title={Imagenet classification with deep convolutional neural networks},
+  author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+  booktitle={Advances in neural information processing systems},
+  pages={1097--1105},
+  year={2012}
+}
 @article{kingma2014adam,
   title={Adam: A method for stochastic optimization},
   author={Kingma, Diederik P and Ba, Jimmy},
